# Gi-t-st

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/gitst/: ColorPalette.h  DemoData.h  Fetcher.h  GraphBuilder.h  HttpClient.h  Models.h  Provider.h  RepoUrl.h  TimeUtil.h
resources/: app.manifest  app.rc
src/: ColorPalette.cpp  DemoData.cpp  Fetcher.cpp  GraphBuilder.cpp  HttpClient.cpp  Provider.cpp  RepoUrl.cpp  TimeUtil.cpp  main.cpp
src/win/: DetailsPanel.cpp  DetailsPanel.h  GraphView.cpp  GraphView.h  Gui.cpp  Gui.h
